syntax = "proto3";

service Aggregator {
    rpc Publish (PublishRequest) returns (PublishResponse) {}
}

message PublishRequest {
    int64 unix_time = 1;
    string log = 2;
    string time = 3;
    string stream = 4;
}

message PublishResponse {
}
